[package]
name = "northstar-rcon-cli"
description = "A small, portable RCON client for the Northstar mod."
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cpdt/northstar-rcon-client"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
crossterm = "0.24"
proc-exit = "1.0"
northstar-rcon-client = { path = "../northstar-rcon-client" }
rpassword = "7.0"
rustyline-async = "0.2"
tokio = { version = "1.20", features = ["macros", "rt", "io-std"] }
