[package]
name = "northstar-rcon-client"
description = "Asynchronous RCON client for the Northstar mod"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
protobuf = "3.1"
thiserror = "1.0"
tokio = { version = "1.20", features = ["net", "io-util"] }

[build-dependencies]
protobuf-codegen = "3.1"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
