[package]
name = "northstar-rcon-client"
description = "Asynchronous RCON client for the Northstar mod"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cpdt/northstar-rcon-client/tree/main/northstar-rcon-client"

[dependencies]
protobuf = "3.1"
thiserror = "1.0"
tokio = { version = "1.20", features = ["net", "io-util"] }

[build-dependencies]
protobuf-codegen = "3.1"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
